--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -70,21 +70,19 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\section{Evolution}
 		\subsection{The meaning of Evolution}
 		With every new browser and browser version being released features and improvment have been added. Browsers became more secure, user and developer friendly, and more efficient. These were implemented because of new technologies, bugs being discovered and in trying to run out the competition. If you add all of the changes to a timeline you can overview the Evolution of the browser.
-		%Evolution of the browser Website pic
 		\subsection{How Patches influenced Browsers}
 			\begin{quote}``I call such changes patches, as they are attempts to fix the original design of the web'' Marco Aiello The Web was Done by Amateurs S. 65 \end{quote}
 		By changing the Web, patches also influenced browsers when they were introduced. In this chapter we will have a short summary of what these patches were and how browsers evolved and adpaped through these changes.
 			\subsubsection{Cookies}
 			\leavevmode\newline
-			Like mentioned before Cookies were introduced with Netscape in 1994 for websites to be able to save data to be remembered for processes on the clients side. The original idea The webbrowser is being used by the server of the website to save textinformation on the Computer of the client. These have made it possible to save login and shopping cart informations but also made Webtracking possible. Later they received critizism for being able to damage the users privacy and threadening security when surfing the web. Under the EU's GDPR Law websites are now forced now ask and inform users about saving data in their Browser.
-			%http cookie wikipedia english/german and Book
+			Like mentioned before Cookies were introduced with Netscape in 1994 for websites to be able to save data to be remembered for processes on the clients side. The original idea The webbrowser is being used by the server of the website to save textinformation on the Computer of the client. These have made it possible to save login and shopping cart informations but also made Webtracking possible. Later they received critizism for being able to damage the users privacy and threadening security when surfing the web. Under the EU's GDPR Law websites are now forced now ask and inform users about saving data in their Browser.[16]
 			\subsubsection{SSL}
 			\leavevmode\newline
-			SSL is the short form for Secure Sockets Layers, which was an introduction of an security system in the Web. One could say that SSL is an application layer based security protocol but that is not entirely true. It actually is used in the session layer which is above the transport layer and beneath the application layer [16]. It was introduced by Netscape and shaped the security protocols we use nowadays. SSL had many flaws that were corrected by its successors TSL, thats why the latest version was deprecated in the year 2015.
+			SSL is the short form for Secure Sockets Layers, which was an introduction of an security system in the Web. One could say that SSL is an application layer based security protocol but that is not entirely true. It actually is used in the session layer which is above the transport layer and beneath the application layer [17]. It was introduced by Netscape and shaped the security protocols we use nowadays. SSL had many flaws that were corrected by its successors TSL, thats why the latest version was deprecated in the year 2015.
 			
 			\subsubsection{Java}
 			\leavevmode\newline
-			In the year 1995, Sun Microsystems published the object-oriented programming language \textit{Java}, inspired by James Gosling. \textit{Java}, formerly called Oak, is able to run on every computer. This is made possible by the Java Virtual Machine, which takes the standard bytecode instructions of the Java program and interpretes it. The only problem is that the JVM is not uniformly implemented across all hardware vendors. The combination of Java and the Web is only possible if the JVM is available to browser on the client side. The Java code is send with the the Web page, where this code is known as Applet. When the browser hits the point where the code should be run, it starts an instance of the JVM and gives it the bytecodes for the execution. [17]
+			In the year 1995, Sun Microsystems published the object-oriented programming language \textit{Java}, inspired by James Gosling. \textit{Java}, formerly called Oak, is able to run on every computer. This is made possible by the Java Virtual Machine, which takes the standard bytecode instructions of the Java program and interpretes it. The only problem is that the JVM is not uniformly implemented across all hardware vendors. The combination of Java and the Web is only possible if the JVM is available to browser on the client side. The Java code is send with the the Web page, where this code is known as Applet. When the browser hits the point where the code should be run, it starts an instance of the JVM and gives it the bytecodes for the execution. [16]
 			\subsubsection{JavaScript Engines} \leavevmode\newline
 			While it would have been possible to couple the handling of JavaScript to the browser engine, every major browser uses a dedicated script engine. This is due to the fact, that JavaScript, while originally created for use in web browsers, is now also used elsewhere. In the web browser these two engines interact with each other through the shared DOM data structure.
 			The first JS engines started with bare interpreters and evolved to full engines with several additional features. The first JavaScript engine was developed by Brendan Eich, co-founder of the Mozilla project, in 1995 for \textit{Netscape}. It was a bare interpreter for the language he was inventing at this time. The first modern JavaScript engine was Googles V8 engine, created for Chrome in 2008. The key innovations was just-in-time compilation, boosting performance significantly. As a result other browser vendors had to overhaul their interpreters to develop into full JavaScript engines. This lead to the development of the Nitro engine for Apples \textit{Safari} browser. Mozilla used portions of Nitro to improve SpiderMonkey, which resulted from Brendan Eichs original JavaScript interpreter. Opera replaced their interpreter with their Carakan engine, also boosting performance significantly.
@@ -93,20 +91,19 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{Basic Technological Changes}
 			\subsubsection{HTTP}
 			\leavevmode\newline
-			\textit{HTTP} stands for HyperText Transfer Protocol. It is an aplication-level, request-reply protocol which is typically transported by a lower-level protocol, like TCP. It works like follows: if the client requests a ressource, the server replys with information and sometime even the ressource itself [17]. Today one differenciates between HTTP and HTTPs, where HTTPs means HyperText Transfer Protocol secure because the HTTP is acompanied by a SSL encryption.
+			\textit{HTTP} stands for HyperText Transfer Protocol. It is an aplication-level, request-reply protocol which is typically transported by a lower-level protocol, like TCP. It works like follows: if the client requests a ressource, the server replys with information and sometime even the ressource itself [16]. Today one differenciates between HTTP and HTTPs, where HTTPs means HyperText Transfer Protocol secure because the HTTP is acompanied by a SSL encryption.
 			\subsubsection{HTML}
 			\leavevmode\newline
-			\textit{HTML} is the abbreviation for HyperText Markup Language. Tim Berners-Lee made this textual format for annotating plain text with informations part of his original Web proposal, and created the first editor and at the same time the first browser around HTML. The first proposal for HTML is dated back to 1993, but today HTML 5 exists; which was standardized in 2014. [17]
+			\textit{HTML} is the abbreviation for HyperText Markup Language. Tim Berners-Lee made this textual format for annotating plain text with informations part of his original Web proposal, and created the first editor and at the same time the first browser around HTML. The first proposal for HTML is dated back to 1993, but today HTML 5 exists; which was standardized in 2014. [16]
 			\subsubsection{URL}
 			\leavevmode\newline
-			\textit{URL} is the short form for Uniform Resource Locator. The \textit{URL} gives the address where specific ressources are located in the Internet and the protocol to access it. The URL contains furthermore the port number to access the address, the location of the resource in the server and a fragment identifier [18]. The \textit{URL} is also one part of the original proposal of the Web from Tim Berners-Lee. 
+			\textit{URL} is the short form for Uniform Resource Locator. The \textit{URL} gives the address where specific ressources are located in the Internet and the protocol to access it. The URL contains furthermore the port number to access the address, the location of the resource in the server and a fragment identifier [19]. The \textit{URL} is also one part of the original proposal of the Web from Tim Berners-Lee. 
 			%TODO: Move to another location?
 			\subsubsection{Browser Engines}
 			\leavevmode\newline
 			The browser engine, also called "layout engine" or "rendering engine", is the core component of most major web browsers. The job of a browser engine ist the transformation of HTML files and other required resources to an interactive web page. While it is possible to separate the engine for the layout and the rendering of the page, in practice they are mostly coupled and not seperated. The browser engine is also responsible for enforcing the web pages security policy and creating the DOM data structure used in scripts. It is also responsible for handling hyperlinks and web forms.
 			Browser engines may also be reused in other application. An email client, for example, may use such an engine for rendering HTML emails. Another example is the "Electron Framework", which uses the engine of \textit{Google Chrome}, used to create many applications. The layout to be rendered is specified by the CSS file of the web page. There are several different browser engine implementations and the most major web browsers use their own browser engine. Examples are Gecko by Mozilla, WebKit by Apple and Blink by Google. Microsoft used to have their own browser engines Trident and EdgeHTML, but use Googles Blink browser engine now.
 		\subsection{Features}
-			\subsubsection{History}
 			\subsubsection{Incognito mode}
 			\leavevmode\newline
 			Private browsing was first added in 2005 by \textit{Safari} on Mac. The feature has since been adapted by many other browsers so that most modern browser have some form of private browsing.
@@ -119,12 +116,10 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\subsubsection{Tabs}
 			\leavevmode\newline
 			The first web browsers did not have tabs as we know them from most modern browsers. While many may consider \textit{Opera} to be the browser to introduce tabbed browsing, \textit{Opera} had a  \textit{Multiple Document Interface} instead. This may seem similar but is substantial different to a \textit{Tabbed Document Interface}. The actual first browser supporting tabs was the \textit{Internet Explorer} Shell "NetCaptor", first released in 1997. The browser to mainstream browser tabs was however Firefox or more specifically its predecessor \textit{Phoenix}.
-			\subsubsection{Browser Chache}
-			\leavevmode\newline
 		\subsection{Evolution Overview}
 		\begin{center}
 		\includegraphics[scale=0.205]{PanoramaEvoOfBr.JPEG}
-		Evolution of the Browser [27]
+		Evolution of the Browser [21]
 		\end{center}
 	\section{Future of the Browser}
 	Nowadays there are already many ways to interact with a browser which seem rather futuristic. You can controll via voice, by hand gestures and even by just looking with your eyes. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air infront of you.
@@ -132,34 +127,34 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser. His vision is for them to be like  mini-operating systems and being able to execute localy. So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer. The patches where already steps into the right direction. Another part is to make website be like applications and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously. It is for sure that more applications like these will be released.
 	An good example for a website supporting Alan Kay's vision is lively-web.org an open source web programming evironment.
 	Everything that is displayed on the website is an object and can be changed, moved or overwritten and gives immediate feedback to the user. Every textfield is able to execute Javascript. You can create your own website or application and are able to edit and download it from everywhere without having to install any software.
-	[26]
+	[22]
 		\subsection{New technologies}
 		New technologies are constantly thrown on the market and Browsers always have to find a way to make them them accessible to the web with bringing as many features as possible from other devices and new ones that fit the device
 			\subsubsection{WebVR Browsers}
 				\leavevmode\newline
-				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.[19]
+				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.[23]
 			\begin{center}
 				\includegraphics[scale=0.35]{Firefox_Reality.png}
-				[19]	Firefox Reality
+				[23]	Firefox Reality
 				\includegraphics[scale=0.35]{Supermedium.png}
-				[20] Supermedium Browser
+				[24] Supermedium Browser
 			\end{center}
 			\subsubsection{AR Browsers}
 				\leavevmode\newline
 				Just like normal Browsers is an Air Browser an applciation. The difference is that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These Informations can be 2D markers or 3D objects for example.Just like most of VR Browsers they also rely on content creators. 
-				[21]
+				[25]
 			\subsubsection{Smartwatches}
 			\leavevmode\newline
-			With the release of smartwatches companies needed to find yet another way to display browsers. The small screen does not offer enough space to fit the usual user interface or keyboard. So one way is to add a website on a connected device to the favorite list so it is possible to access the website by just one touch on your watch. But also it is possible to connect the smartphone with the watch an use its keyboard.[22]
+			With the release of smartwatches companies needed to find yet another way to display browsers. The small screen does not offer enough space to fit the usual user interface or keyboard. So one way is to add a website on a connected device to the favorite list so it is possible to access the website by just one touch on your watch. But also it is possible to connect the smartphone with the watch an use its keyboard.[26]
 			\begin{center}
 				\includegraphics[scale=0.35]{Smartwatch.jpg}
 				
-				[23] Web Browser for Wear OS on Android	
+				[27] Web Browser for Wear OS on Android	
 			\end{center}
 		\subsection{Quantum computing}
 		\leavevmode\newline
 			Another big topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and servers. Thats why since a couple of years institutes around the world are looking for algorithms that are post-quantum secure. Meaning that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays like RSA. Browsers will need to adapt to these changes in order to asure security for it's customers and stay competitve on the market. 
-			[24]
+			[28]
 		\subsection{Next for Browsers}
 			Since the introduction of the browser a little and a lot has changed. It gained on speed, performance, security and usabilty. These attributes with grow in the future as well for sure. 
 			Opera created an concept for how they imagine user friendliness will be in the near future with their Browser. It is already downloadable, but Opera Neon is still a work in progress.
@@ -169,7 +164,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		 	\end{center}
 		 	
 			Even though the steps are small, Browsers are becoming more and more like operating systems and with that closer to the original vision of Alan Key. But they still have a long way to go since the they werent designed for that purpose.
-			Web 3.0 which is supposed to help the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can't be determined at this stage. We might even see a completely new type but if so it needs to be initiated by one of the major browser companies.[25]
+			Web 3.0 which is supposed to help the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can't be determined at this stage. We might even see a completely new type but if so it needs to be initiated by one of the major browser companies.[29]
 	\section{Summery}
 	
 	\section{Sources}
