--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -24,7 +24,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		\subsection{History and Evolution of the Browser}
 		The report contains the history of the browsers and big improvements to the web through some of these browsers. It continues with showing the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. And at last this paper will discuss and explore the future of the browsers.
 		\subsection{What is a Browser}
-		A Browser is an application that interprets HTML documents and data to render them to a Web page making the Web accessable. A browser lets you visit websites and do activities within them like login, view multimedia, link from one site to another, visit one page from another, print, send and receive email, among many other activities. The most common browser software titles on the market are: Microsoft Internet Explorer, Google's Chrome, Mozilla Firefox, Apple's Safari, and Opera. Browser availability depends on the operating system your computer is using (for example: Microsoft Windows, Linux, Ubuntu, Mac OS, among others).
+		A Browser is an application that interprets HTML documents and data to render them to a Web page making the Web accessable. A browser lets you visit websites and do activities within them like login, view multimedia, link from one site to another, visit one page from another, print, send and receive email, among many other activities. The most common browser software titles on the market are: Microsoft Internet Explorer, Google's Chrome, Mozilla Firefox, Apple's Safari, and Opera. Browser availability depends on the operating system your computer is using.
 
 		%Book site 52,https://de.wikipedia.org/wiki/Webbrowser
 	\section{History}
@@ -86,7 +86,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\subsubsection{JavaScript Engines} \leavevmode\newline
 			While it would have been possible to couple the handling of JavaScript to the browser engine, every major browser uses a dedicated script engine. This is due to the fact, that JavaScript, while originally created for use in web browsers, is now also used elsewhere. In the web browser these two engines interact with each other through the shared DOM data structure.
 			The first JS engines started with bare interpreters and evolved to full engines with several additional features. The first JavaScript engine was developed by Brendan Eich, co-founder of the Mozilla project, in 1995 for \textit{Netscape}. It was a bare interpreter for the language he was inventing at this time. The first modern JavaScript engine was Googles V8 engine, created for Chrome in 2008. The key innovations was just-in-time compilation, boosting performance significantly. As a result other browser vendors had to overhaul their interpreters to develop into full JavaScript engines. This lead to the development of the Nitro engine for Apples \textit{Safari} browser. Mozilla used portions of Nitro to improve SpiderMonkey, which resulted from Brendan Eichs original JavaScript interpreter. Opera replaced their interpreter with their Carakan engine, also boosting performance significantly.
-			Since 2017 all major browser have added support for WebAssembly to their JavaScript engines. This gives the ability to execute pre-compiled scripts for performance-critical parts of the web page. The code is executed in the same sandbox as the regular JS code.
+			Since 2017 all major browser have added support for WebAssembly to their JavaScript engines. This gives the ability to execute pre-compiled scripts for performance-critical parts of the web page. The code is executed in the same sandbox as the regular JS code.[19]
 			
 		\subsection{Basic Technological Changes}
 			\subsubsection{HTTP}
@@ -102,24 +102,24 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			\subsubsection{Browser Engines}
 			\leavevmode\newline
 			The browser engine, also called "layout engine" or "rendering engine", is the core component of most major web browsers. The job of a browser engine ist the transformation of HTML files and other required resources to an interactive web page. While it is possible to separate the engine for the layout and the rendering of the page, in practice they are mostly coupled and not seperated. The browser engine is also responsible for enforcing the web pages security policy and creating the DOM data structure used in scripts. It is also responsible for handling hyperlinks and web forms.
-			Browser engines may also be reused in other application. An email client, for example, may use such an engine for rendering HTML emails. Another example is the "Electron Framework", which uses the engine of \textit{Google Chrome}, used to create many applications. The layout to be rendered is specified by the CSS file of the web page. There are several different browser engine implementations and the most major web browsers use their own browser engine. Examples are Gecko by Mozilla, WebKit by Apple and Blink by Google. Microsoft used to have their own browser engines Trident and EdgeHTML, but use Googles Blink browser engine now.
+			Browser engines may also be reused in other application. An email client, for example, may use such an engine for rendering HTML emails. Another example is the "Electron Framework", which uses the engine of \textit{Google Chrome}, used to create many applications. The layout to be rendered is specified by the CSS file of the web page. There are several different browser engine implementations and the most major web browsers use their own browser engine. Examples are Gecko by Mozilla, WebKit by Apple and Blink by Google. Microsoft used to have their own browser engines Trident and EdgeHTML, but use Googles Blink browser engine now.[20]
 		\subsection{Features}
 			\subsubsection{Incognito mode}
 			\leavevmode\newline
-			Private browsing was first added in 2005 by \textit{Safari} on Mac. The feature has since been adapted by many other browsers so that most modern browser have some form of private browsing.
+			Private browsing was first added in 2005 by \textit{Safari} on Mac. The feature has since been adapted by many other browsers so that most modern browser have some form of private browsing.[21]
 			\subsubsection{Bookmarks}
 			\leavevmode\newline
-			Bookmarks were a quite early feature and have been included since \textit{Mosaic} in 1993, altough called hotlists back then. Newer browsers have expanded the feature of bookmarks. \textit{Firefox} for example, introduced so called "Live Bookmarks" which are essentially bookmarks provided as RSS feed.
+			Bookmarks were a quite early feature and have been included since \textit{Mosaic} in 1993, altough called hotlists back then. Newer browsers have expanded the feature of bookmarks. \textit{Firefox} for example, introduced so called "Live Bookmarks" which are essentially bookmarks provided as RSS feed.[22]
 			\subsubsection{Browser Extensions}
 			\leavevmode\newline
-			As the first major browser, \textit{Internet Explorer} introduced browser extensions with Version 5 in 1999. The other major browsers also added extensions over the years with Firefox in 2004, Opera in 2009 and Google Chrome and Safari in 2010. Nowadays most browsers support extensions to customize the user experience.
+			As the first major browser, \textit{Internet Explorer} introduced browser extensions with Version 5 in 1999. The other major browsers also added extensions over the years with Firefox in 2004, Opera in 2009 and Google Chrome and Safari in 2010. Nowadays most browsers support extensions to customize the user experience.[23]
 			\subsubsection{Tabs}
 			\leavevmode\newline
-			The first web browsers did not have tabs as we know them from most modern browsers. While many may consider \textit{Opera} to be the browser to introduce tabbed browsing, \textit{Opera} had a  \textit{Multiple Document Interface} instead. This may seem similar but is substantial different to a \textit{Tabbed Document Interface}. The actual first browser supporting tabs was the \textit{Internet Explorer} Shell "NetCaptor", first released in 1997. The browser to mainstream browser tabs was however Firefox or more specifically its predecessor \textit{Phoenix}.
+			The first web browsers did not have tabs as we know them from most modern browsers. While many may consider \textit{Opera} to be the browser to introduce tabbed browsing, \textit{Opera} had a  \textit{Multiple Document Interface} instead. This may seem similar but is substantial different to a \textit{Tabbed Document Interface}. The actual first browser supporting tabs was the \textit{Internet Explorer} Shell "NetCaptor", first released in 1997. The browser to mainstream browser tabs was however Firefox or more specifically its predecessor \textit{Phoenix}.[24]
 		\subsection{Evolution Overview}
 		\begin{center}
 		\includegraphics[scale=0.205]{PanoramaEvoOfBr.JPEG}
-		Evolution of the Browser [21]
+		Evolution of the Browser [25]
 		\end{center}
 	\section{Future of the Browser}
 	Nowadays there are already many ways to interact with a browser which seem rather futuristic. You can controll via voice, by hand gestures and even by just looking with your eyes. You are not just having you browser on your Computer but also on your phone, your watch and floating in the air infront of you.
@@ -127,7 +127,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	One of Alan Kay's main crizisms about the Web is the absence of an computational abilty for the browser. His vision is for them to be like  mini-operating systems and being able to execute localy. So it is possible for example if you want to learn an programming language you can just write code on the website and execute it on your computer. The patches where already steps into the right direction. Another part is to make website be like applications and with web applications like google docs or Microsoft office home the browser is going towards that vision. These make it possible to create, send and receive content like documents or tables while other people can access them simultaneously. It is for sure that more applications like these will be released.
 	An good example for a website supporting Alan Kay's vision is lively-web.org an open source web programming evironment.
 	Everything that is displayed on the website is an object and can be changed, moved or overwritten and gives immediate feedback to the user. Every textfield is able to execute Javascript. You can create your own website or application and are able to edit and download it from everywhere without having to install any software.
-	[22]
+	[26]
 		\subsection{New technologies}
 		New technologies are constantly thrown on the market and Browsers always have to find a way to make them them accessible to the web with bringing as many features as possible from other devices and new ones that fit the device
 			\subsubsection{WebVR Browsers}
@@ -135,26 +135,26 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 				Virtual Reality Browsers are making it possible to access the Web with VR-Glasses. To navigate the voice or a virtual keyboard can be used. The Browsers makes it possible to watch 360 degrees videos or pictures. Developers are able to create WebVR Applications themself and put them on the web just like a website. Vr-Browsers like Firefox Reality or Supermedium Browser allow to display websites not like a 2D Sheet but rather like a 3D environment without having to download content. These evironments can also be experiences, see second picture, games or creative activities like 3D painting.[23]
 			\begin{center}
 				\includegraphics[scale=0.35]{Firefox_Reality.png}
-				[23]	Firefox Reality
+				[27]	Firefox Reality
 				\includegraphics[scale=0.35]{Supermedium.png}
-				[24] Supermedium Browser
+				[28] Supermedium Browser
 			\end{center}
 			\subsubsection{AR Browsers}
 				\leavevmode\newline
 				Just like normal Browsers is an Air Browser an applciation. The difference is that AR Browsers are for phone or tablet use only. Their purpose is to display additional informations on a camera screen. These Informations can be 2D markers or 3D objects for example.Just like most of VR Browsers they also rely on content creators. 
-				[25]
+				[29]
 			\subsubsection{Smartwatches}
 			\leavevmode\newline
-			With the release of smartwatches companies needed to find yet another way to display browsers. The small screen does not offer enough space to fit the usual user interface or keyboard. So one way is to add a website on a connected device to the favorite list so it is possible to access the website by just one touch on your watch. But also it is possible to connect the smartphone with the watch an use its keyboard.[26]
+			With the release of smartwatches companies needed to find yet another way to display browsers. The small screen does not offer enough space to fit the usual user interface or keyboard. So one way is to add a website on a connected device to the favorite list so it is possible to access the website by just one touch on your watch. But also it is possible to connect the smartphone with the watch an use its keyboard.[30]
 			\begin{center}
 				\includegraphics[scale=0.35]{Smartwatch.jpg}
 				
-				[27] Web Browser for Wear OS on Android	
+				[31] Web Browser for Wear OS on Android	
 			\end{center}
 		\subsection{Quantum computing}
 		\leavevmode\newline
 			Another big topic of these times is quantum computing. Quantum computers would make it significantly easier to decrypt keys for the secure transport of data between the browser and servers. Thats why since a couple of years institutes around the world are looking for algorithms that are post-quantum secure. Meaning that their generated keys can withstand the decryption of an quantum computer longer than algorithms nowadays like RSA. Browsers will need to adapt to these changes in order to asure security for it's customers and stay competitve on the market. 
-			[28]
+			[32]
 		\subsection{Next for Browsers}
 			Since the introduction of the browser a little and a lot has changed. It gained on speed, performance, security and usabilty. These attributes with grow in the future as well for sure. 
 			Opera created an concept for how they imagine user friendliness will be in the near future with their Browser. It is already downloadable, but Opera Neon is still a work in progress.
@@ -164,11 +164,10 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 		 	\end{center}
 		 	
 			Even though the steps are small, Browsers are becoming more and more like operating systems and with that closer to the original vision of Alan Key. But they still have a long way to go since the they werent designed for that purpose.
-			Web 3.0 which is supposed to help the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can't be determined at this stage. We might even see a completely new type but if so it needs to be initiated by one of the major browser companies.[29]
-	\section{Summery}
+			Web 3.0 which is supposed to help the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can not be determined at this stage. We might even see a completely new type but if so it needs to be initiated by one of the major browser companies.[33]
+	\section{Conclusion}
 	
 	\section{Sources}
-	%Oder als Subsections??
 	[1] \url{https://crossbrowsertesting.com/blog/test-automation/history-of-web-browsers/}, used 22.04.2019
 	\newline
 	[2] \url{https://history-computer.com/Internet/Conquering/Mosaic.html}, used 24.04.2019
@@ -206,39 +205,51 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 	\newline
 	[17]\url{https://security.stackexchange.com/questions/19681/where-does-ssl-encryption-take-place}, used 12.06.2019
 	\newline
-	[18] \url{https://en.m.wikipedia.org/wiki/JavaScript_engine
-		https://t3n.de/magazin/javascript-engines-turbolader-fuer-browser-247188/
-		https://patents.google.com/patent/US6892200B2/en
-		https://v8.dev/}, used 25.06.2019
+	[18] \url{https://en.m.wikipedia.org/wiki/JavaScript_engine}
+	\newline \url{https://t3n.de/magazin/javascript-engines-turbolader-fuer-browser-247188/}
+	\newline
+	\url{https://patents.google.com/patent/US6892200B2/en}
+	\newline
+	\url{https://v8.dev/}, all used 25.06.2019
 	\newline
 	[19] \url{https://www.techopedia.com/definition/1352/uniform-resource-locator-url}, 25.06.2019
 	\newline
 	[20]
-	\url{https://en.m.wikipedia.org/wiki/Browser_engine
-		https://www.pcmag.com/encyclopedia/term/61819/browser-rendering-engine
-		https://stackoverflow.com/questions/46169376/whats-the-difference-between-a-browser-engine-and-rendering-engine}26.06
+	\url{https://en.m.wikipedia.org/wiki/Browser_engine}
 	\newline
-	[21] \url{http://www.evolutionoftheweb.com/?hl=de#/evolution/night}, used 05.05.2019
+	\url{https://www.pcmag.com/encyclopedia/term/61819/browser-rendering-engine}
 	\newline
-	[22] \url{
+	\url{https://stackoverflow.com/questions/46169376/whats-the-difference-between-a-browser-engine-and-rendering-engine}, all used 26.06.2019
+	\newline
+	[21] \url{https://en.wikipedia.org/wiki/Private_browsing}, used 20.06.2019
+	\newline
+	[22] \url{https://en.wikipedia.org/wiki/Bookmark_(digital)}, used 20.06.2019
+	\newline
+	[23] \url{https://en.wikipedia.org/wiki/Browser_extension}, used 20.06.2019
+	\newline
+	[24] \url{https://allthatiswrong.wordpress.com/2011/01/14/opera-did-not-invent-tabbed-browsing/}, used 20.06.2019
+	\newline
+	[25] \url{http://www.evolutionoftheweb.com/?hl=de#/evolution/night}, used 05.05.2019
+	\newline
+	[26] \url{
 	https://lively-web.org/welcome.html}, used 05.05.2019
 	\newline
-	[23] \url{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}, used 27.05.2019
+	[27] \url{https://blog.mozilla.org/blog/2018/09/18/firefox-reality-now-available/}, used 27.05.2019
 	\newline
-	[24]
+	[28]
 	\url{https://www.supermedium.com/#gallery_1-1}
 	\newline	
-	[25] \url{https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/}, used 26.06.19
+	[29] \url{https://www.augmented-minds.com/de/erweiterte-realitaet/ar-app-und-ar-browser/}, used 26.06.19
 	\newline
-	[26]
+	[30]
 	\url{http://www.die-smartwatch.de/2014/07/26/wear-internet-browser-surfen-auf-der-smartwatch.html} used 24.06.19
 	\newline
-	[27] \url{
+	[31] \url{
 	https://play.google.com/store/apps/details?id=com.appfour.wearbrowser&hl=de}, used 26.06.19
 	\newline
-	[28] \url{	https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption}, used 26.06.19
+	[32] \url{	https://www.f5.com/labs/articles/threat-intelligence/how-quantum-computing-will-change-browser-encryption}, used 26.06.19
 	\newline
-	[29] \url{
+	[33] \url{
 	https://www.lifewire.com/web-3-0-end-web-browser-3486610}, used 26.06.19
 	\newline
 \end{document}
