Abstract and conclusion added

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -17,7 +17,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 \maketitle
 
 	\begin{abstract}
-		Summary of our paper (70-250 words)
+		The first browser was introduced in 1990, by Tim Berners-Lee, and was its purpose it was to act as an editor for HTML and to view the contents of the Web. After that, the number of different browser increased shortly and the plain text-based browser where replaced by graphical browser. How will the browser change in the future? This paper might give a glimpse to the answer of this question, based on the history of the browser and how it evolved.
 	\end{abstract}
 
 	\section{Introduction}
@@ -167,7 +167,7 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 			Even though the steps are small, Browsers are becoming more and more like operating systems and with that closer to the original vision of Alan Key. But they still have a long way to go since the they werent designed for that purpose.
 			Web 3.0 which is supposed to help the user to deal with the amount of information on the web. This might also force Browsers to make a change but into which direction and to what degree can not be determined at this stage. We might even see a completely new type but if so it needs to be initiated by one of the major browser companies.[33]
 	\section{Conclusion}
-	
+	In summary, this paper started with the history of most important browsers; for example Nexus, Netscape and others. The next topic was included the basic technologies of the browser, namely HTTP, HTML and URL, as well as the Patches of the Web introduced by browsers and basic features of the browsers, like Tabs, Bookmarks or the Incognito mode. And finally the paper took a glimpse into a possible future of the browsers, wwith VR, AR or Quantum computing.
 	\section{Sources}
 	[1] \url{https://crossbrowsertesting.com/blog/test-automation/history-of-web-browsers/}, used 22.04.2019
 	\newline
