Checked grammar till mozilla firefox

--- a/History_and_Evolution_of_the_Browser/main.tex
+++ b/History_and_Evolution_of_the_Browser/main.tex
@@ -22,24 +22,26 @@ Universitätsstraße 38, 70569 Stuttgart, Germany}
 
 	\section{Introduction}
 		\subsection{History and Evolution of the Browser}
-		The report contains the history of the browsers and big improvements to the web through some of these browsers. It continues with showing the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. And at last this paper will discuss and explore the future of the browsers.
+		The report contains the history of the browsers and massive improvements to the web through some of these browsers. It continues with describing the fundamental technologies of browsers and features that were implemented later that helped improve the experience of using browsers. And at last this paper will discuss and explore the future of the browsers.
 		\subsection{What is a Browser}
-		A Browser is an application that interprets HTML documents and data to render them to a Web page making the Web accessable. A browser lets you visit websites and do activities within them like login, view multimedia, link from one site to another, visit one page from another, print, send and receive email, among many other activities. The most common browser software titles on the market are: Microsoft Internet Explorer, Google's Chrome, Mozilla Firefox, Apple's Safari, and Opera. Browser availability depends on the operating system your computer is using.
-
+		A Browser is an application that interprets HTML documents and data to render them to a Web page making the Web accessible. A browser allows you to navigate websites and perform activities within them like login, view multimedia, link from one site to another, visit one page from another, print, send and receive email, among many other activities. The most common browser software titles on the market are: Microsoft Internet Explorer, Google's Chrome, Mozilla Firefox, Apple's Safari, and Opera. Browser availability depends on the operating system your computer is using.
 		%Book site 52,https://de.wikipedia.org/wiki/Webbrowser
 	\section{History}
 		\subsection{The first browsers}
-		The first browser for the web was also an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990 [1]. A few years later, in 1994, the Browser was renamed \textit{Nexus}. The browser \textit{WorldWideWeb} was, apart of the fact that it was the first browser, also the first HTML editor.
-		To view pictures you had to follow the link of the picture, download it and open it on the computer. Another browser with an diffenrent name but a similar functionality was \textit{Lynx}, which was published 1992 by Thomas Dickey.
+		The first browser for the web was furthermore an invention of the founder of the web, Tim Berners-Lee. The browser was called \textit{WorldWideWeb} and was introduced to the world in the year 1990 [1]. A few years later, in 1994, the Browser was renamed \textit{Nexus}. The browser \textit{WorldWideWeb} was, apart of the fact that it was the first browser, as well the first HTML editor.
+		To view pictures, you had to follow the link of the picture, download it and open it on the computer. Another browser with an different name but a similar functionality was \textit{Lynx}, which was published 1992 by Thomas Dickey.
 		\subsection{First graphical browsers}
-		When the Web was published Tim Berners-Lee wanted his invention to succeed. To ensure the success he knew he needed more people to get interested. He needed as many developers as possible to work on web based projects, so there is a constant flow of new content, and he needed the general public to get occupied with the web to make it a long lasting success. For that reason Tim Berners-Lee helped many project that tried to produce new graphical based browsers. In the year 1992 many browser were invented by students as small projects with exactly that goal, were \textit{ViolaWWW} or otherwise called \textit{Viola} was one of the most prominent and \textit{Erwise} was one of the lesser known graphical browsers. But not long after \textit{Viola} came a new competitor. \\This new browser was \textit{Mosaic}.
+		When the Web was published Tim Berners-Lee wanted his invention to succeed. To ensure the success he knew he required more people to get interested. He needed as many developers as possible to work on web based projects, so there is a constant flow of new content, and he needed the general public to get involved with the web to make it a long-lasting success. For that reason Tim Berners-Lee helped many project that tried to produce new graphical based browsers. In the year 1992 many browser were invented by students as small projects with exactly that goal, were \textit{ViolaWWW} or otherwise called \textit{Viola} was one of the most prominent and \textit{Erwise} was one of the lesser known graphical browsers. But not long after \textit{Viola} followed a new competitor. \\This new browser was \textit{Mosaic}.
+		%TODO published right word?
 		\subsection{Mosaic}
-		In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. That was only possible when the team of NCSA engineers would make their browser accessable for other systems than Unix. Andreessen and Bina, together with some of their NCSA associates, worked on the versions for Mac and PC which came out in late spring of the same year. With this the user numbers of \textit{Mosaic} rose even higher, with 5000 downloads per month. After the graduation of Marc Andreessen and Eric Bina they met James H. Clark, the founde of Silicon Graphics, and discussed how to make the Web commercialisable. That set the starting point for an new Browser called \textit{Netscape}. So Andreessen and Bina left NCSA, with some of their colleagues, in 1994 and settled down in Silicon Valley. After the 2 left the NCSA assigned all commercial rights for \textit{Mosaic} to Spyglass, Inc. Spyglass licensed their technology to many other companies, including Microsoft. In the year 1997 the NCSA discontinued the support for the \textit{Mosaic}, shifting their research focus to other developments projects. The last release for the \textit{Mosaic} browser dates back to August 1997 [2].
+		In January 1993 \textit{Mosaic} was published for free and its distribution numbers skyrocketed. Marc Andreessen and Eric Bina, the developers of the \textit{Mosaic} browser, constructed the browser with the intention that a broader audience could use the World Wide Web. That was only possible when the team of NCSA engineers would make their browser accessable for other systems than Unix. Andreessen and Bina, together with some of their NCSA associates, worked on the versions for Mac and PC which came out in late spring of the same year. With this the user numbers of \textit{Mosaic} rose even higher, with 5000 downloads per month. After the graduation of Marc Andreessen and Eric Bina, they met James H. Clark, the founder of Silicon Graphics, and discussed how to make the Web commercialisable. That set the starting point for a new Browser called \textit{Netscape}. Therefore Andreessen and Bina left NCSA, with some of their colleagues, in 1994 and settled down in Silicon Valley. After the 2 left the NCSA assigned all commercial rights for \textit{Mosaic} to Spyglass, Inc. Spyglass licensed their technology to many other companies, including Microsoft. In the year 1997 the NCSA discontinued the support for the \textit{Mosaic}, shifting their research focus to other developments projects. The last release for the \textit{Mosaic} browser dates back to August 1997 [2].
 		\subsection{Netscape}
-		\textit{Netscape} marks the beginning of many important things, that shaped the idea of the browser we know today. The first version of the browser was launched in October 1994 and was programmed by the NCSA team of Andreessen and Bina, that they acquired. In the beginning the team was not sure how to earn money with their browser, but later on their browser marked the end of research-project status of the Web and started the era of the Web of commercial interest and exploitation. The Browser also invented the cookie feature, what lets the browser save data, and the Secure Socket Layer (SSL), what protects the privacy  and integrity of transactions. The first browser was the \textit{Mosaic Netscape} release 0.9. Because of problems with the name the company adapted the name \textit{Netscape Communications} and launched by the end of december the \textit{Netscape Navigator 1.0}, what also solved the problem with the name conflict regarding the NCSA Mosaic browser [3].
-		\\Because of the few competetors in the field of browsers, \textit{Netscape} became the most popular browser in a short time. The main income for the company was throught B2B-business and the stock markets. Espacially the stock markets were lucrative, because on the first day (August 9th, 1995) their stock price rose from 28\$ per share to a high of 74.75\$ and at the end of the day they closed off with 58.25\$ [4]. That was a greet sign and it didn't end their; yet. They rose in popularity, until Microsoft started competing in the Web sector. With Microsoft and Netscape Communications the browser wars started [5].
+		\textit{Netscape} marks the beginning of many important events, that shaped the idea of the browser we know today. The first version of the browser was launched in October 1994 and was programmed by the NCSA team of Andreessen and Bina, that they acquired. In the beginning the team was not sure how to earn money with their browser, but later on, their browser marked the end of research-project status of the Web and started the era of the Web of commercial interest and exploitation. The Browser also invented the cookie feature, which lets the browser save data, and the Secure Socket Layer (SSL), which protects the privacy and integrity of transactions. The first browser was the \textit{Mosaic Netscape} release 0.9. Because of problems with the name, the company adapted the name \textit{Netscape Communications} and launched by the end of December the \textit{Netscape Navigator 1.0}, what furthermore solved the problem with the name conflict regarding the NCSA Mosaic browser [3].
+		\\Because of the few competitors in the field of browsers, \textit{Netscape} became the most popular browser in a short time. The main income for the company was through B2B-business and the stock markets. Especially the stock markets were lucrative, because on the first day (August 9th, 1995) their stock price rose from 28\$ per share to a high of 74.75\$ and at the end of the day they closed off with 58.25\$ [4]. That was a greet sign and it didn't end there; yet. They rose in popularity, until Microsoft started competing in the Web sector. With Microsoft and Netscape Communications, the browser wars started [5].
+		%TODO greet sign?,  With Microsoft and Netscape Communications?, what=which because "The pronoun which must be used instead of what because it introduces a nonessential clause."
 		\subsection{Internet Explorer}
-		\textit{Internet Explorer 1.0} (furthemore called IE) was the first attempt of Microsoft on 17 August 1995 to dethrone Netscape as the market leader on the browser territorium. For the first 2 versions of IE, Microsoft used the licensed code of Spyglass Inc. ,from \textit{Mosaic}, as a starting point. The first version that was mostly independently made in the company, would be IE 3.0. It introduced as the first browser ever CSS and it was the first version that did not use the Spyglass source code; only Spyglass technology. It was also the first true competetor for \textit{Netscape}. The following years would become known as the \textbf{Browser Wars} between Netscape and IE, where both parties would improve their browser in a rapid pace. The tides turned with IE 4.0, where Microsoft changed their strategy. Before IE 4.0 their browser was a free browser for the home, like Netscape, but Microsofts' browser was interferior in technology and had to be installed first, before you could use it. But IE 4.0 shipped with all Windows and Macintosh PCs', means the first browser most people interacted with after they bought a new PC was IE and not Netscape [6]. With that IE dethroned Netscape as the most used browser and send Netscape into the depths of nothingness. After the defeat of Netscape the development of Microsofts browser slacked down after the release of IE 6.0 in 2001. But this error made it possible for new competetors to emerge and evolve.
+		\textit{Internet Explorer 1.0} (furthermore called IE) was the first attempt of Microsoft on 17 August 1995 to dethrone Netscape as the market leader on the browser territory. For the first 2 versions of IE, Microsoft used the licensed code of Spyglass Inc. ,from \textit{Mosaic}, as a starting point. The first version that was mostly independently made in the company, would be IE 3.0. It introduced as the first browser ever CSS and it was the first version that did not use the Spyglass source code; only Spyglass technology. It was in addition the first true competitor for \textit{Netscape}. The following years would become known as the \textbf{Browser Wars} between Netscape and IE, where both parties would improve their browser in a rapid pace. The tides turned with IE 4.0, where Microsoft changed their strategy. Before IE 4.0 their browser was a free browser for the home, like Netscape, but Microsofts' browser was interferior in technology and had to be installed first, before you could use it. But IE 4.0 shipped with all Windows and Macintosh PCs', indicating the first browser most people interacted with after they bought a new PC was IE and not Netscape [6]. With that IE dethroned Netscape as the most used browser and send Netscape into the depths of nothingness. After the defeat of Netscape the development of Microsofts browser slacked down after the release of IE 6.0 in 2001. But this error made it possible for new competitors to emerge and evolve.
+		%TODO depths of nothingness?
 		\subsection{Mozilla Firefox}
 		\textit{Mozilla Firefox}, originally called Phoenix or Firebird, is the unoffical offspring of Netscape created in the year 1998. The first version of Firefox, Firefox 1.0, was released on 9 November 2004. Shortly before the release of the first full version Mozilla gained a bunch of new users, because of the warning from the US goverment against the exploit in IE. Firefox and its predecessor were created on the bases of the Netscape source code, which was published on 31 March 1998 in the attempt of Netscape Communications to get more programmers that could improve the code and help defeat Microsoft in the \textbf{Browser Wars}. Unfortunately that was not enough to save Netscape. But it does not mean that Mozilla Firefox was going down with Netscape. The reason behind this was because \textit{Mozilla Firefox} had already its standalone browser, with a big community and enough  programmers  to keep working on the browser [7] [8]. Another reason is the browser was back financially by many investors and the Mozilla Corpration, which was founded as a totally owned branch of the Mozilla Foundation. Nowadays Firefox is still fairly popular browser with 6-8, even while Safari and Google Chrome have a bigger market share.
 		\subsection{Opera}
